--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,9 +1,17 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "Reproducible Research: Course Project 1"
+author: Bibek Karki
+date: "01/15/2017"
+output: html_document
 ---
+
+```{r globalOptions, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+## Introduction
+
+This project makes use of [Activity Monitoring Data] (https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip) dataset. The data, which was collected using a personal activity monitoring device, includes number of steps taken at every 5 minute interval. The objective of the project is to explore the the walking behavior of related person using the dataset.
 
 
 ## Loading and preprocessing the data
