Average daily activity pattern

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -11,29 +11,89 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Introduction
 
-This project makes use of [Activity Monitoring Data] (https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip) dataset which was collected using a personal activity monitoring device. The data includes number of steps taken at every 5 minute interval over a two month period (October - November, 2012). The objective of the project is to explore the the walking behavior of related person using the dataset.
+This project makes use of [Activity Monitoring Data](https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip) dataset which was collected using a personal activity monitoring device. The data includes number of steps taken at every 5 minute interval over a two month period (October - November, 2012). The objective of the project is to explore the the walking behavior of related person using the dataset.
+
 
 
 ## Loading and preprocessing the data
 
-The current directory is expected to be in **RepData_PeerAssessment1**, the [repository forked] (https://github.com/rdpeng/RepData_PeerAssessment1) for the project.
+The current directory is expected to be in **RepData_PeerAssessment1**, the [repository forked](https://github.com/rdpeng/RepData_PeerAssessment1) for the project.
 
 ```{r loadData}
+# Loading the data
 if(!file.exists("activity.csv")) {
         unzip("activity.zip")
 }
-AMD <- read.csv("activity.csv")
+
+if (!exists("AMD")) {
+        AMD <- read.csv("activity.csv")
+}
+
+# Preprocessing
+library(ggplot2)
 ```
 
+
+
 ## What is mean total number of steps taken per day?
+
+**Step 1:** Calculate the total steps taken per day.
+
+**Step 2:** Plot the histogram distribution of total number of steps per day.
+
+```{r totalStepsPerDay}
+## Step 1
+totalSteps <- aggregate(steps ~ date, data = AMD, FUN = sum)
+
+## Step 2
+ggplot(data = totalSteps, mapping = aes(steps)) +
+        geom_histogram(bins = 9, col = "steelblue", fill = rgb(0.00,0.33,0.67)) + 
+        labs(title = "Distribution of Total Steps per Day", x = "Steps/day", y = "Frequency") +
+        theme_bw(base_family = "Times")
+```
+
+**Step 3:** Calculate the mean and median steps per day
+
+```{r medianMean}
+as.integer(mean(totalSteps$steps))
+as.integer(median(totalSteps$steps))
+```
 
 
 
 ## What is the average daily activity pattern?
 
+**Step 1:** Calculate average number of steps for each time interval
+
+**Step 2:** Show the result in line plot
+
+```{r averageStepsPerInterval}
+## Step 1
+averageSteps <- aggregate(steps~interval,data = AMD, FUN = mean)
+
+## Step 2
+ggplot(data = averageSteps, mapping = aes(x = interval, y = steps)) +
+        geom_line(lty = 1, col = rgb(0.00,0.33,0.67)) + 
+        labs(title = "Average Steps per Time Interval", x = "Time Interval", y = "Average Number of Steps") +
+        theme_bw(base_family = "Times")
+```
+
+**Step 3:** Which 5-minute interval has the largest average steps
+```{r maxAvgSteps}
+## Step 3
+averageSteps$interval[which.max(averageSteps$steps)]
+```
+
 
 
 ## Imputing missing values
+
+**Step 1:** Calculate the total number of missing values
+
+```{r missingValues}
+## Step 1
+sum(is.na(AMD$steps))
+```
 
 
 
