--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -2,7 +2,9 @@
 title: 'Reproducible Research: Course Project 1'
 author: "Bibek Karki"
 date: "01/15/2017"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 ```{r globalOptions, include=FALSE}
